--- a/src/components/login/signIn.css
+++ b/src/components/login/signIn.css
@@ -8,7 +8,7 @@
     margin: 10px;
     padding: 10px;
     background-color: rgb(99, 35, 90);
-    color: blue;
+    color: white;
 }
 #demo-simple-select-password, #demo-simple-select-ocuppation, #demo-simple-select-id, #demo-simple-select-address{
     color:white;
